--- a/Plachtovac/Client/Components/Plachta/DesignerItemProperties.razor
+++ b/Plachtovac/Client/Components/Plachta/DesignerItemProperties.razor
@@ -46,7 +46,7 @@
     private string[] _fonts = new[] { "Arial", "Comic Sans" };
 
 
-    private async Task PocetRiadkovChanged(int newValue)
+    private void PocetRiadkovChanged(int newValue)
     {
         if (GraphicsItem is ZoznamVeducichTextGraphicsItem zv && Parent is AktivitaDesignerView parent)
         {
