--- a/Plachtovac/Client/Components/Plachta/DesignerItemProperties.razor
+++ b/Plachtovac/Client/Components/Plachta/DesignerItemProperties.razor
@@ -43,7 +43,7 @@
     [Parameter]
     public ComponentBase Parent { get; set; }
 
-    private string[] _fonts = new[] { "Arial", "Comic Sans" };
+    private string[] _fonts = new[] { "Arial", "Comic Sans", "Helvetica", "Garamond", "Calibri", "Consolas", "Comic Sans MS" };
 
 
     private void PocetRiadkovChanged(int newValue)
