--- a/Plachtovac/Client/Components/Forms/AktivitaPropertiesForm.razor
+++ b/Plachtovac/Client/Components/Forms/AktivitaPropertiesForm.razor
@@ -27,6 +27,9 @@
         <Check TValue="bool" @bind-Checked="@hasTimeBadge">Zobraziť čas</Check>
     </Field>
     <Field>
+        <Check TValue="bool" @bind-Checked="@hasEndTimeBadge">Zobraziť čas konca</Check>
+    </Field>
+    <Field>
         <Check TValue="bool" @bind-Checked="@hasVeduciPreAktivitu">Veduci pre aktivitu</Check>
     </Field>
 </Validations>
@@ -57,6 +60,7 @@
 
     private bool hasVeduciPreAktivitu;
     private bool hasTimeBadge;
+    private bool hasEndTimeBadge;
 
     protected override void OnInitialized()
     {
@@ -64,6 +68,7 @@
         trvanieAktivity = (int)Aktivita.Trvanie.TotalMinutes;
         time = Aktivita.Time.ToString(@"hh\:mm");
         hasTimeBadge = Aktivita.ZobrazCas;
+        hasEndTimeBadge = Aktivita.ZobrazCasKonca;
         hasVeduciPreAktivitu = Aktivita.Veduci != null;
     }
 
@@ -111,6 +116,7 @@
                 Aktivita.Veduci = null;
             }
             Aktivita.ZobrazCas = hasTimeBadge;
+            Aktivita.ZobrazCasKonca = hasEndTimeBadge;
 
             await BlazoredModal.CloseAsync(ModalResult.Ok(Aktivita));
         }
