--- a/css/site.css
+++ b/css/site.css
@@ -358,6 +358,18 @@ ul.sablonyAktivit {
     left: -2px;
 }
 
+.aktivitaEndTime {
+    position: absolute;
+    display: block;
+    border: 1px solid black;
+    padding: 2px;
+    font-size: 8pt;
+    font-weight: bold;
+    background: white;
+    top: -2px;
+    right: -2px;
+}
+
 
 .accordion .card-header:after {
     font-family: "Font Awesome 5 Free";
