Zmena print layoutu

--- a/Plachtovac/Client/Pages/ViewOnly.razor
+++ b/Plachtovac/Client/Pages/ViewOnly.razor
@@ -10,176 +10,180 @@
 
 @if (PlachtaService.AktualnyRozvrh != null)
 {
-    @foreach (var veduci in Rozvrh.Veduci)
+    @foreach (var veduci in Rozvrh.Veduci/*.Where(v => v.Prezyvka.Equals("Kubo"))*/)
     {
         <div class="portrait program-stretnutia">
             <h1>@Rozvrh.Nazov: @Rozvrh.ZaciatokRozvrhu?.ToString("dd.MM") - <strong>@veduci.Prezyvka</strong></h1>
-
-            <div class="border-top border-left border-black" style="padding: 0 20px;">
-                <div class="row">
-                    <div class="col program-dna">
-                        <h2>Program dňa:</h2>
-                        @if (!string.IsNullOrWhiteSpace(Rozvrh.Program))
+            
+            <div class="program-stretnutia-container">
+                <div class="dennyProgram">
+                    <h2>Program dňa</h2>
+                    @if (!string.IsNullOrWhiteSpace(Rozvrh.Program))
+                    {
+                        @foreach (var row in Rozvrh.Program.Split("\n"))
                         {
-                            <table>
-                                @foreach (var row in Rozvrh.Program.Split("\n"))
-                                {
-                                    var parts = row.Split(" ");
-                                    var cas = parts.First();
-                                    var program = string.Join(" ", parts.Skip(1));
-                                    <span class="program-cas">@cas</span>
-                                    @program
-                                    <br/>
-                                }
-                            </table>
+                            var parts = row.Split(" ");
+                            var cas = parts.First();
+                            var program = string.Join(" ", parts.Skip(1));
+                            <span class="program-cas"><strong>@cas</strong></span>
+                            @program
+                            <br/>
                         }
-                    </div>
-                    <div class="col">
-                        <h2>Môj program</h2>
-                        @foreach (var den in Rozvrh.Dni)
+                    }
+                </div>
+                <div class="mojProgram">
+                    <h2>Môj program</h2>
+                    <div>
+                        @{
+                            var aktivity = Rozvrh.Dni.SelectMany(d => d.Aktivity.Where(a => a.JeVeduci(veduci)).Select(a => (d, a)));
+                            var maxRows = 15;
+                        }
+                        @for (var i = 0; i <= aktivity.Count() / maxRows; i++)
                         {
-                            foreach (var aktivita in den.Aktivity)
-                            {
-                                if (aktivita.JeVeduci(veduci))
+                            <div>
+                                @foreach (var (den, aktivita) in aktivity.Skip(i * maxRows).Take(maxRows))
                                 {
                                     <span style="margin-right: 3px;">@(DniVTyzdni.GetDen((den.Poradie + PlachtaService.AktualnyRozvrh.Zaciatok) % 7))</span>
                                     <span style="margin-right: 3px;">@aktivita.Time.ToString("hh\\:mm"):</span>
                                     <span style="margin-right: 3px;">@aktivita.Nazov -</span>
                                     <span style="margin-right: 3px;">@aktivita.GetPopisVeduceho(veduci)</span>
-                                    <br/>
+                                    <br>
                                 }
-                            }
+                            </div>
                         }
                     </div>
                 </div>
-
-
-                <div class="row">
-                    <div class="border-rb col-8">
-                        <div class="row">
-                            <div class="col col-6 border-0">
-                                <div class="row h-100">
-                                    <div class="col col-horizontal">
-                                        <h2>Vedúci družín: </h2>
-                                        @foreach (var druzinka in Rozvrh.Veduci.GroupBy(v => v.Druzinka))
-                                        {
-                                            if (!string.IsNullOrWhiteSpace(druzinka.Key))
-                                            {
-                                                @druzinka.Key<text>:</text>
-                                                @string.Join(", ", druzinka.Select(v => v.Prezyvka))<br/>
-                                            }
-                                        }
-                                    </div>
-                                    <div class="col col-horizontal">
-                                        <h2>Zoznam krúžkov</h2>
-                                        @{
-                                            var kruzkyAktivita = Rozvrh.SablonyAktivit.FirstOrDefault(k => k.Typ == "Krúžok");
-                                            if (kruzkyAktivita != null)
-                                            {
-                                                foreach (var kruzok in kruzkyAktivita.Veduci.GroupBy(v => v.Popis))
-                                                {
-                                                    @string.Join(", ", kruzok.Select(v => v.Veduci.Prezyvka))<text>: </text>
-                                                    @kruzok.Key<br/>
-                                                }
-                                            }
-                                        }
-                                    </div>
-                                    <div class="col col-horizontal">
-                                        <h2>čo si mám doniesť (okrem vecí na svoj program)</h2>
-                                        <ul>
-                                            <li>Čokoládu či koláč 😁</li>
-                                            <li>Notebook a/alebo gitaru, ak si to na chystačke sľúbil</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col col-6 border-right-0 photo">
-                                <img src="@veduci.Fotka"/>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <h2>Bonusy:</h2>
-                                @{
-                                    var zoznamBonusov = Rozvrh.Veduci.SelectMany(v => v.Ulohy.Select(u => new {v.Prezyvka, u})).GroupBy(x => x.u);
-                                    @foreach (var bonus in zoznamBonusov)
-                                    {
-                                        @bonus.Key<text>: </text>
-                                        @string.Join(", ", bonus.Select(v => v.Prezyvka))<br/>
-                                    }
-                                }
-                            </div>
-                        </div>
-                    </div>
-                    <div class="border-rb col-4">
-                        <h2>Zoznam prednášok:</h2>
-                        @{
-                            var prednasky = Rozvrh.Dni
-                                .SelectMany(
-                                    d => d.Aktivity.OrderBy(a => a.Time).Where(a => a.Sablona.Typ == "Prednáška")
-                                        .SelectMany((a, i) => a.Veduci.Select(a => new {Veduci = a, N = i})));
-                            foreach (var aktivitaVeduci in prednasky)
-                            {
-                                if (aktivitaVeduci.Veduci.Popis?.Length > 2)
-                                {
-                                    <text>(@aktivitaVeduci.Veduci.Popis[0]@aktivitaVeduci.N) @aktivitaVeduci.Veduci.Veduci.Prezyvka: @aktivitaVeduci.Veduci.Popis.Substring(2)</text>
-                                    <br/>
-                                }
-                            }
+                <div class="druzinky">
+                    <h2>Vedúci družín</h2>
+                    @foreach (var druzinka in Rozvrh.Veduci.GroupBy(v => v.Druzinka))
+                    {
+                        if (!string.IsNullOrWhiteSpace(druzinka.Key))
+                        {
+                            <strong>@druzinka.Key<text>: </text></strong>
+                            @string.Join(", ", druzinka.Select(v => v.Prezyvka))<br/>
                         }
-                    </div>
+                    }
                 </div>
-
-                <div class="row">
-                    <div class="border-rb col-9">
-                        <h2>Semináre:</h2>
-                        @{
-                            var seminare = Rozvrh.SablonyAktivit.FirstOrDefault(k => k.Typ == "Seminár");
-                            if (seminare != null)
+                <div class="kruzky">
+                    <h2>Zoznam krúžkov</h2>
+                    @{
+                        var kruzkyAktivita = Rozvrh.SablonyAktivit.FirstOrDefault(k => k.Typ == "Krúžok");
+                        if (kruzkyAktivita != null)
+                        {
+                            foreach (var kruzok in kruzkyAktivita.Veduci.GroupBy(v => v.Popis))
                             {
-                                foreach (var seminar in seminare.Veduci)
-                                {
-                                    <text>@seminar.Veduci.Prezyvka: @seminar.Popis</text>
-                                    <br/>
-                                }
+                                @string.Join(", ", kruzok.Select(v => v.Veduci.Prezyvka))<text>: </text>
+                                <strong>@kruzok.Key</strong><br/>
                             }
                         }
-                    </div>
-                    <div class="border-rb col-3">
-                        <h2>Rozprávania:</h2>
+                    }
+                </div>
+                <div class="zoznamNaDonesenie">
+                    <h2>čo si mám doniesť (okrem vecí na svoj program)</h2>
+                    <ul>
+                        <li>Čokoládu či koláč 😁</li>
+                        <li>Notebook a/alebo gitaru, ak si to na chystačke sľúbil</li>
+                    </ul>
+                </div>
+                <div class="bonusy">
+                    <h2>Bonusy</h2>
+                    @{
+                        var first = true;
+                        var zoznamBonusov = Rozvrh.Veduci.SelectMany(v => v.Ulohy.Select(u => new { v.Prezyvka, u })).GroupBy(x => x.u).OrderBy(g => g.Key);
+                        @foreach (var bonus in zoznamBonusov)
+                        {
+                            if (first)
+                            {
+                                first = false;
+                            }
+                            else
+                            {
+                                <text>&nbsp;|&nbsp;</text>
+                            }
+                            <strong>@bonus.Key<text>: </text></strong>
+                            @string.Join(", ", bonus.Select(v => v.Prezyvka))
+                        }
+                    }
+                </div>
+                <div class="fotka">
+                    <img src="@(veduci.Fotka ?? "https://sezam.sk/wp-content/uploads/2020/02/logo.jpg")" />
+                </div>
+                <div class="prednasky">
+                    <h2>Zoznam prednášok</h2>
+                    @{
+                        var prednasky = Rozvrh.Dni
+                            .SelectMany(
+                                d => d.Aktivity.OrderBy(a => a.Time).Where(a => a.Sablona.Typ == "Prednáška").ToList()
+                                    .SelectMany(a => a.Veduci.Select(av => new {Veduci = av, Aktivita = a})));
+
+                        var blockCounter = 0;
+                        var lastAktivita = (Aktivita) null;
+
+                        foreach (var aktivitaVeduci in prednasky)
+                        {
+                            if (aktivitaVeduci.Veduci.Popis?.Length > 2)
+                            {
+                                if (lastAktivita != aktivitaVeduci.Aktivita)
+                                {
+                                    lastAktivita = aktivitaVeduci.Aktivita;
+                                    blockCounter++;
+                                }
+                                var parts = aktivitaVeduci.Veduci.Popis.Split(" ");
+                                <text>(@parts[0] @blockCounter) <strong>@aktivitaVeduci.Veduci.Veduci.Prezyvka:</strong> @string.Join(" ", parts.Skip(1))</text>
+                                <br/>
+                            }
+                        }
+                    }
+                </div>
+                <div class="semináre">
+                    <h2>Semináre</h2>
+                    @{
+                        var seminare = Rozvrh.SablonyAktivit.FirstOrDefault(k => k.Typ == "Seminár");
+                        if (seminare != null)
+                        {
+                            foreach (var seminar in seminare.Veduci.GroupBy(v => v.Popis))
+                            {
+                                @string.Join(", ", seminar.Select(v => v.Veduci.Prezyvka))<text>: </text>
+                                <strong>@seminar.Key</strong><br />
+                            }
+                        }
+                    }
+                </div>
+                <div class="rozpravania">
+                    <h2>Rozprávania</h2>
+                    <div>
                         @{
                             var rozpravania = Rozvrh.Dni
                                 .SelectMany(
                                     d => d.Aktivity.OrderBy(a => a.Time).Where(a => a.Sablona.Typ == "Rozprávanie")
-                                        .SelectMany((a, i) => a.Veduci.Select(a => new {Veduci = a, N = i})));
-                            foreach (var rozpravanieBloky in rozpravania.GroupBy(x => x.N))
+                                        .SelectMany((a, i) => a.Veduci.Select(av => new { Veduci = av, Aktivita = a })));
+
+                            blockCounter = 0;
+                            foreach (var rozpravanieBloky in rozpravania.GroupBy(x => x.Aktivita))
                             {
-                                @rozpravanieBloky.Key
-                                ;
-                                foreach (var rozpravanie in rozpravanieBloky)
-                                {
-                                    <text>(@rozpravanie.Veduci.Veduci.Prezyvka: @rozpravanie.Veduci.Popis</text>
-                                    <br/>
-                                }
+                                ++blockCounter;
+                                <div>
+                                    @foreach (var rozpravanie in rozpravanieBloky)
+                                    {
+                                        <text>(@blockCounter) <strong>@rozpravanie.Veduci.Veduci.Prezyvka:</strong> @rozpravanie.Veduci.Popis</text>
+                                        <br />
+                                    }
+                                </div>
                             }
                         }
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col col-full">
-                        <h2>A ešte</h2>
-                        <ul>
-                            <li>Pripraviť si večerné čítanie</li>
-                            <li>Pripraviť si večerné čítanie</li>
-                            <li>Pripraviť si večerné čítanie</li>
-                            <li>Pripraviť si večerné čítanie</li>
-                            <li>Pripraviť si večerné čítanie</li>
-                        </ul>
-                    </div>
+                <div class="dalsiePoznamky">
+                    <h2>A ešte</h2>
+                    <ul>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                        <li>Pripraviť si večerné čítanie</li>
+                    </ul>
                 </div>
             </div>
-
         </div>
         <div class="landscape">
             <PlachtaView Editable="false" Rozvrh="Rozvrh" VeduciToHilight="veduci"></PlachtaView>
